--- a/tools-json/pom.xml
+++ b/tools-json/pom.xml
@@ -27,4 +27,17 @@
 			<version>1.8.1</version>
 		</dependency>
 	</dependencies>
+		<distributionManagement>
+
+		<repository>
+			<id>developers.mosaic-cloud.eu</id>
+			<name>developers.mosaic-cloud.eu-releases</name>
+			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
+		</repository>
+		<snapshotRepository>
+			<id>developers.mosaic-cloud.eu</id>
+			<name>developers.mosaic-cloud.eu-snapshots</name>
+			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
