--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
 		<module>tools-miscellaneous</module>
 		<module>tools-transcript</module>
 	</modules>
+	<repositories>
+		<repository>
+			<id>mosaic</id>
+			<name>Mosaic Maven Repository</name>
+			<layout>default</layout>
+			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
+			<snapshots>
+				<updatePolicy>always</updatePolicy>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -29,6 +41,13 @@
 	</dependencies>
 	<build>
 		<plugins>
+					<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<tagBase>https://svn.apache.org/repos/asf/maven/components/releases</tagBase>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
