--- a/tools-classpath-exporter/pom.xml
+++ b/tools-classpath-exporter/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>tools-parent</artifactId>
-		<version>0.2</version>
+		<version>0.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>tools-classpath-exporter</artifactId>
 	<dependencies>
