--- a/interoperability-examples/pom.xml
+++ b/interoperability-examples/pom.xml
@@ -31,5 +31,10 @@
 			<artifactId>junit</artifactId>
 			<version>4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 	</dependencies>
 </project>
