Modified key-value connector and driver to use different buckets.

--- a/mosaic-mvn/mosaic-connector/src/main/resources/mosaic/connector/config.properties
+++ b/mosaic-mvn/mosaic-connector/src/main/resources/mosaic/connector/config.properties
@@ -2,6 +2,7 @@ AmqpConnector.0=amqp.connector_threads
 AllConnector.0=interop.channel.address
 AllConnector.1=interop.driver.identifier
 KeyValueStoreConnector.0=kvstore.connector_threads
+KeyValueStoreConnector.1=kvstore.bucket
 ResourceComponentCallbacks.0=amqp.driver.group.identifier
 ResourceComponentCallbacks.1=kvstore.driver.group.identifier
 ResourceComponentCallbacks.2=memcached.driver.group.identifier
