--- a/mosaic-mvn/mosaic-driver/src/main/resources/mosaic/driver/config.properties
+++ b/mosaic-mvn/mosaic-driver/src/main/resources/mosaic/driver/config.properties
@@ -27,4 +27,5 @@ KVDriverComponentCallbacks.2=mosaic-riak-kv:get-store-pb-endpoint
 KVDriverComponentCallbacks.3=interop.channel.address
 KVDriverComponentCallbacks.4=interop.driver.identifier
 KVDriverComponentCallbacks.5=mosaic-component:get.channel.data
+KVDriverComponentCallbacks.6=mosaic-riak-kv:get-store-http-endpoint
 
