--- a/interoperability-zeromq/pom.xml
+++ b/interoperability-zeromq/pom.xml
@@ -29,5 +29,12 @@
 			<artifactId>zeromq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<!-- Needed for tests -->
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		a
 	</dependencies>
 </project>
