--- a/mosaic-mvn/mosaic-interop/pom.xml
+++ b/mosaic-mvn/mosaic-interop/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>2.4.0a</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>r09</version>
+		</dependency>
 	</dependencies>
 	<organization>
 		<name>eAustria Research Institute</name>
