--- a/components-core/pom.xml
+++ b/components-core/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-callbacks</artifactId>
-			<version>${project.version}</version>
+			<version>${mosaic.tools.version}</version>
 		</dependency>
 	</dependencies>
 </project>
