--- a/components-container/pom.xml
+++ b/components-container/pom.xml
@@ -24,13 +24,14 @@
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-miscellaneous</artifactId>
-			<version>${project.version}</version>
+			<version>${mosaic.tools.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-transcript</artifactId>
-			<version>${project.version}</version>
+			<version>${mosaic.tools.version}</version>
 		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
