--- a/components-examples/pom.xml
+++ b/components-examples/pom.xml
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-classpath-exporter</artifactId>
-			<version>${project.version}</version>
+			<version>${mosaic.tools.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
