--- a/mosaic-mvn/pom.xml
+++ b/mosaic-mvn/pom.xml
@@ -12,7 +12,7 @@
 	<version>0.1-SNAPSHOT</version>
 	<url>http://www.mosaic-cloud.eu/</url>
 	<packaging>pom</packaging>
-	
+
 	<repositories>
 		<repository>
 			<id>spy</id>
@@ -94,13 +94,42 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0-beta-3</version>
+				<version>3.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.8</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-	
-		<distributionManagement>
 
+	<distributionManagement>
 		<repository>
 			<id>developers.mosaic-cloud.eu</id>
 			<name>developers.mosaic-cloud.eu-releases</name>
