Changed method for data serialization handling.

--- a/mosaic-mvn/mosaic-driver/src/main/resources/mosaic/driver/kvstore/kv.properties
+++ b/mosaic-mvn/mosaic-driver/src/main/resources/mosaic/driver/kvstore/kv.properties
@@ -1,5 +1,5 @@
 kvstore.driver_threads=10
-kvstore.driver_name=RIAKREST
+kvstore.driver_name=RIAKPB
 kvstore.bucket=mosaic_test
 interop.channel.address=tcp://127.0.0.1:31029
 interop.driver.identifier=driver.riak.1
