--- a/mosaic-mvn/mosaic-core/pom.xml
+++ b/mosaic-mvn/mosaic-core/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>json</artifactId>
 			<version>20090211</version>
 		</dependency>
+				<dependency>
+			<groupId>eu.mosaic_cloud</groupId>
+			<artifactId>tools-json</artifactId>
+			<version>0.2-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
