Added the PingPong example and Container premain.

--- a/mosaic-mvn/pom.xml
+++ b/mosaic-mvn/pom.xml
@@ -31,7 +31,8 @@
 		<module>mosaic-driver</module>
 		<module>mosaic-connector</module>
 		<module>mosaic-cloudlet</module>
-		<module>mosaic-examples</module>
+		<!-- 
+		<module>mosaic-examples</module> -->
 	</modules>
 
 	<properties>
