--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+		xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>components-parent</artifactId>
 	<version>0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<url>http://www.mosaic-cloud.eu/</url>
+	
 	<modules>
 		<module>components-container</module>
 		<module>components-core</module>
@@ -13,6 +18,7 @@
 		<module>components-launcher</module>
 		<module>components-tools</module>
 	</modules>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -26,6 +32,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -37,12 +44,20 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0</version>
+			</plugin>
 		</plugins>
 	</build>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<license.licenseName>apache_v2</license.licenseName>
 		<mosaic.tools.version>0.3-SNAPSHOT</mosaic.tools.version>
 	</properties>
+	
 	<repositories>
 		<repository>
 			<id>mosaic</id>
@@ -55,6 +70,17 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	
+	<organization>
+		<name>mOSAIC Project</name>
+		<url>http://www.mosaic-cloud.eu/</url>
+	</organization>
+	
+	<scm>
+		<connection>scm:hg:http://mosaic.ieat.ro/hg/users/ciprian/mosaic-java-components</connection>
+		<developerConnection>scm:hg:file://${basedir}</developerConnection>
+	</scm>
+	
 	<distributionManagement>
 		<repository>
 			<id>developers.mosaic-cloud.eu</id>
@@ -68,4 +94,15 @@
 			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
 		</snapshotRepository>
 	</distributionManagement>
+	
+	<issueManagement>
+		<system>jira</system>
+		<url>http://developers.mosaic-cloud.eu/jira</url>
+	</issueManagement>
+	
+	<ciManagement>
+		<system>bamboo</system>
+		<url>http://developers.mosaic-cloud.eu/bamboo</url>
+	</ciManagement>
+	
 </project>
