--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+		xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>tools-parent</artifactId>
 	<version>0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<url>http://www.mosaic-cloud.eu/</url>
+	
 	<modules>
 		<module>tools-callbacks</module>
 		<module>tools-classpath-exporter</module>
@@ -14,18 +19,7 @@
 		<module>tools-miscellaneous</module>
 		<module>tools-transcript</module>
 	</modules>
-	<repositories>
-		<repository>
-			<id>mosaic</id>
-			<name>Mosaic Maven Repository</name>
-			<layout>default</layout>
-			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
-			<snapshots>
-				<updatePolicy>always</updatePolicy>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -39,20 +33,9 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<configuration>
-					<tagBase>https://svn.apache.org/repos/asf/maven/components/releases</tagBase>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -62,24 +45,43 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0</version>
+			</plugin>
 		</plugins>
 	</build>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<license.licenseName>apache_v2</license.licenseName>
 	</properties>
-	<name>mosaic-java-tools</name>
-	<url>http://www.mosaic-cloud.eu/</url>
-	<scm>
-		<connection>scm:hg:http://mosaic.ieat.ro/hg/users/ciprian/mosaic-java-tools/</connection>
-		<developerConnection>scm:hg:file://${basedir}</developerConnection>
-	</scm>
+	
+	<repositories>
+		<repository>
+			<id>mosaic</id>
+			<name>mOSAIC Maven Repository</name>
+			<layout>default</layout>
+			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
+			<snapshots>
+				<updatePolicy>always</updatePolicy>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	
 	<organization>
 		<name>mOSAIC Project</name>
-		<url>http://www.mosaic-cloud.eu</url>
+		<url>http://www.mosaic-cloud.eu/</url>
 	</organization>
+	
+	<scm>
+		<connection>scm:hg:http://mosaic.ieat.ro/hg/users/ciprian/mosaic-java-tools</connection>
+		<developerConnection>scm:hg:file://${basedir}</developerConnection>
+	</scm>
+	
 	<distributionManagement>
-
 		<repository>
 			<id>developers.mosaic-cloud.eu</id>
 			<name>developers.mosaic-cloud.eu-releases</name>
@@ -92,12 +94,15 @@
 			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
 		</snapshotRepository>
 	</distributionManagement>
+	
 	<issueManagement>
 		<system>jira</system>
-		<url>http://developers.mosaic-cloud.eu/jira/</url>
+		<url>http://developers.mosaic-cloud.eu/jira</url>
 	</issueManagement>
+	
 	<ciManagement>
 		<system>bamboo</system>
 		<url>http://developers.mosaic-cloud.eu/bamboo</url>
 	</ciManagement>
+	
 </project>
