--- a/interoperability-tools/pom.xml
+++ b/interoperability-tools/pom.xml
@@ -19,12 +19,12 @@
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-miscellaneous</artifactId>
-			<version>0.3-SNAPSHOT</version>
+			<version>${mosaic.tools.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-transcript</artifactId>
-			<version>0.3-SNAPSHOT</version>
+			<version>${mosaic.tools.version}</version>
 		</dependency>
 	</dependencies>
 </project>
