--- a/mosaic-mvn/mosaic-core/pom.xml
+++ b/mosaic-mvn/mosaic-core/pom.xml
@@ -34,7 +34,7 @@
 				<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-json</artifactId>
-			<version>0.2-SNAPSHOT</version>
+			<version>${mosaic.tools.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
