--- a/mosaic-mvn/mosaic-driver/src/main/resources/mosaic/driver/kvstore/kv.properties
+++ b/mosaic-mvn/mosaic-driver/src/main/resources/mosaic/driver/kvstore/kv.properties
@@ -1,6 +1,6 @@
 kvstore.driver_threads=10
 kvstore.driver_name=RIAKPB
-kvstore.bucket=mosaic_test
+#kvstore.bucket=mosaic_test
 interop.channel.address=tcp://127.0.0.1:31029
 interop.driver.identifier=driver.riak.1
 
