--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -6,16 +6,21 @@
 	
 	<modelVersion>4.0.0</modelVersion>
 	
+        <parent>
+                <artifactId>java-parent</artifactId>
+                <groupId>eu.mosaic_cloud</groupId>
+                <version>0.4-SNAPSHOT</version>
+        </parent>
+	
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>components-parent</artifactId>
-	<version>0.2-SNAPSHOT</version>
+	<version>0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<url>http://www.mosaic-cloud.eu/</url>
 	
 	<modules>
 		<module>components-container</module>
 		<module>components-core</module>
-		<module>components-examples</module>
 		<module>components-launcher</module>
 		<module>components-tools</module>
 	</modules>
@@ -56,7 +61,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<license.licenseName>apache_v2</license.licenseName>
-		<mosaic.tools.version>0.3-SNAPSHOT</mosaic.tools.version>
 	</properties>
 	
 	<repositories>
