--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -2,10 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>mOSAIC-API</artifactId>
+		<artifactId>java-parent</artifactId>
 		<groupId>eu.mosaic_cloud</groupId>
-		<version>0.1-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<version>0.4-SNAPSHOT</version>
 	</parent>
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>mosaic-cloudlet</artifactId>
