--- a/examples/interoperability/pom.xml
+++ b/examples/interoperability/pom.xml
@@ -6,8 +6,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
-		<artifactId>interoperability-parent</artifactId>
-		<version>0.2-SNAPSHOT</version>
+		<artifactId>java-parent</artifactId>
+		<version>0.4-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>interoperability-examples</artifactId>
 	<dependencies>
