--- a/infrastructure/components-container/pom.xml
+++ b/infrastructure/components-container/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>components-parent</artifactId>
-		<version>0.2-SNAPSHOT</version>
+		<version>0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>components-container</artifactId>
 	<dependencies>
@@ -24,12 +24,12 @@
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-miscellaneous</artifactId>
-			<version>${mosaic.tools.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-transcript</artifactId>
-			<version>${mosaic.tools.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
