--- a/platform/mosaic-core/pom.xml
+++ b/platform/mosaic-core/pom.xml
@@ -2,9 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>mOSAIC-API</artifactId>
+		<artifactId>java-parent</artifactId>
 		<groupId>eu.mosaic_cloud</groupId>
-		<version>0.1-SNAPSHOT</version>
+		<version>0.4-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>mosaic-core</artifactId>
@@ -33,7 +34,7 @@
 				<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-json</artifactId>
-			<version>${mosaic.tools.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
