--- a/pom.xml
+++ b/pom.xml
@@ -1,31 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated from archetype; please customize. -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<project
+		xmlns="http://maven.apache.org/POM/4.0.0"
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
-
+	
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>java-parent</artifactId>
-	<name>mOSAIC Java parent</name>
 	<version>0.4-SNAPSHOT</version>
-	<url>http://www.mosaic-cloud.eu/</url>
 	<packaging>pom</packaging>
-
+	<url>http://www.mosaic-cloud.eu/</url>
+	
+       <modules>
+                <module>platform/mosaic-core</module>
+                <module>platform/mosaic-interop</module>
+                <module>drivers</module>
+                <module>connectors</module>
+                <module>cloudlets</module>
+                <module>interoperability</module>
+                <module>infrastructure</module>
+                <module>tools</module>
+                <module>examples/simple-cloudlets</module>
+                <module>examples/simple-components</module>
+                <module>examples/interoperability</module>
+        </modules>
+	
+	<dependencies>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>r09</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0</version>
+			</plugin>
+		</plugins>
+	</build>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<license.licenseName>apache_v2</license.licenseName>
+	</properties>
+	
 	<repositories>
 		<repository>
-			<id>couchbase</id>
-			<name>Couchbase Repository</name>
-			<layout>default</layout>
-			<url>http://files.couchbase.com/maven2/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
 			<id>mosaic</id>
-			<name>Mosaic Maven Repository</name>
+			<name>mOSAIC Maven Repository</name>
 			<layout>default</layout>
 			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
 			<snapshots>
@@ -33,107 +75,27 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+                <repository>
+                        <id>couchbase</id>
+                        <name>Couchbase Repository</name>
+                        <layout>default</layout>
+                        <url>http://files.couchbase.com/maven2/</url>
+                        <snapshots>
+                                <enabled>false</enabled>
+                        </snapshots>
+                </repository>
 	</repositories>
-
-	<modules>
-		<module>platform/mosaic-core</module>
-		<module>platform/mosaic-interop</module>
-		<module>drivers</module>
-		<module>connectors</module>
-		<module>cloudlets</module>
-		<module>interoperability</module>
-		<module>infrastructure</module>
-		<module>tools</module>
-		<module>examples/simple-cloudlets</module>
-		<module>examples/simple-components</module>
-		<module>examples/interoperability</module>
-	</modules>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.7</version>
-				<configuration>
-					<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
-					<docletArtifact>
-						<groupId>org.umlgraph</groupId>
-						<artifactId>doclet</artifactId>
-						<version>5.1</version>
-					</docletArtifact>
-					<additionalparam>-all -views</additionalparam>
-					<useStandardDocletOptions>true</useStandardDocletOptions>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<!-- <excludeFilterFile>exclude.xml</excludeFilterFile> -->
-					<findbugsXmlOutput>true</findbugsXmlOutput>
-					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-					<threshold>Low</threshold>
-					<effort>Max</effort>
-					<xmlOutput>true</xmlOutput>
-				</configuration>
-			</plugin>
-
-
-		</plugins>
-	</reporting>
-
-	<inceptionYear>2011</inceptionYear>
-
+	
 	<organization>
-		<name>eAustria Research Institute</name>
-		<url>www.ieat.ro</url>
+		<name>mOSAIC Project</name>
+		<url>http://www.mosaic-cloud.eu/</url>
 	</organization>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-
+	
+	<scm>
+		<connection>scm:hg:http://mosaic.ieat.ro/hg/users/ciprian/mosaic-java-components</connection>
+		<developerConnection>scm:hg:file://${basedir}</developerConnection>
+	</scm>
+	
 	<distributionManagement>
 		<repository>
 			<id>developers.mosaic-cloud.eu</id>
@@ -147,5 +109,15 @@
 			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
 		</snapshotRepository>
 	</distributionManagement>
-
+	
+	<issueManagement>
+		<system>jira</system>
+		<url>http://developers.mosaic-cloud.eu/jira</url>
+	</issueManagement>
+	
+	<ciManagement>
+		<system>bamboo</system>
+		<url>http://developers.mosaic-cloud.eu/bamboo</url>
+	</ciManagement>
+	
 </project>
