--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -3,15 +3,14 @@
 		xmlns="http://maven.apache.org/POM/4.0.0"
 		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	
 	<modelVersion>4.0.0</modelVersion>
-	
-	<groupId>eu.mosaic_cloud</groupId>
+	<parent>
+		<groupId>eu.mosaic_cloud</groupId>
+		<artifactId>java-parent</artifactId>
+		<version>0.4-SNAPSHOT</version>
+	</parent>
 	<artifactId>tools-parent</artifactId>
-	<version>0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<url>http://www.mosaic-cloud.eu/</url>
-	
 	<modules>
 		<module>tools-callbacks</module>
 		<module>tools-classpath-exporter</module>
@@ -20,90 +19,4 @@
 		<module>tools-miscellaneous</module>
 		<module>tools-transcript</module>
 	</modules>
-	
-	<dependencies>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>r09</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
-			</plugin>
-		</plugins>
-	</build>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<license.licenseName>apache_v2</license.licenseName>
-	</properties>
-	
-	<repositories>
-		<repository>
-			<id>mosaic</id>
-			<name>mOSAIC Maven Repository</name>
-			<layout>default</layout>
-			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
-			<snapshots>
-				<updatePolicy>always</updatePolicy>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	
-	<organization>
-		<name>mOSAIC Project</name>
-		<url>http://www.mosaic-cloud.eu/</url>
-	</organization>
-	
-	<scm>
-		<connection>scm:hg:http://mosaic.ieat.ro/hg/users/ciprian/mosaic-java-tools</connection>
-		<developerConnection>scm:hg:file://${basedir}</developerConnection>
-	</scm>
-	
-	<distributionManagement>
-		<repository>
-			<id>developers.mosaic-cloud.eu</id>
-			<name>developers.mosaic-cloud.eu-releases</name>
-			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
-		</repository>
-		<snapshotRepository>
-			<id>developers.mosaic-cloud.eu</id>
-			<name>developers.mosaic-cloud.eu-snapshots</name>
-			<uniqueVersion>false</uniqueVersion>
-			<url>http://developers.mosaic-cloud.eu:8081/artifactory/mosaic</url>
-		</snapshotRepository>
-	</distributionManagement>
-	
-	<issueManagement>
-		<system>jira</system>
-		<url>http://developers.mosaic-cloud.eu/jira</url>
-	</issueManagement>
-	
-	<ciManagement>
-		<system>bamboo</system>
-		<url>http://developers.mosaic-cloud.eu/bamboo</url>
-	</ciManagement>
-	
 </project>
