--- a/platform/mosaic-core/pom.xml
+++ b/platform/mosaic-core/pom.xml
@@ -24,5 +24,11 @@
 			<artifactId>tools-json</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
