--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -8,6 +8,12 @@
 	</parent>
 	<artifactId>mosaic-driver</artifactId>
 	<dependencies>
+                <dependency>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                        <version>4.8.2</version>
+                        <scope>test</scope>
+                </dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>interoperability-core</artifactId>
