--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.wagon</groupId>
+						<artifactId>wagon-ssh</artifactId>
+						<version>1.0</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
@@ -97,6 +104,10 @@
 	</scm>
 	
 	<distributionManagement>
+		<site>
+			<id>builder.mosaic.ieat.ro</id>
+			<url>scp://builder.mosaic.ieat.ro/srv/sites/mosaic-java-platform</url>
+		</site>
 		<repository>
 			<id>developers.mosaic-cloud.eu</id>
 			<name>developers.mosaic-cloud.eu-releases</name>
