Added junit to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 			<version>20090211</version>
 		</dependency>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>mosaic-cloudlet</artifactId>
 			<version>0.1-SNAPSHOT</version>
