Channel endpoint hack.

--- a/cloudlets/src/main/resources/mosaic/cloudlet/config.properties
+++ b/cloudlets/src/main/resources/mosaic/cloudlet/config.properties
@@ -8,6 +8,7 @@ AmqpQueueAccessor.6=amqp.exclusive
 AmqpQueueAccessor.7=amqp.auto_delete
 AmqpQueueAccessor.8=amqp.passive
 AmqpQueueAccessor.9=amqp.durable
+AmqpQueueConsumer.0=amqp.auto_ack
 CloudletDummyContainer.0=cloudlet.main_class
 CloudletDummyContainer.1=cloudlet.state_class
 CloudletDummyContainer.2=cloudlet.resource_file
