Repaired a small driver bug which caused message ack to fail.

--- a/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
@@ -24,10 +24,19 @@ cloudlet.resource_file=ping-cloudlet.properties
 queue.consumer.amqp.exchange=pingpong-exchange
 queue.consumer.amqp.routing_key=pong
 queue.consumer.amqp.queue=pong-queue
+queue.consumer.amqp.auto_ack=false
+queue.consumer.amqp.durable=false
+queue.consumer.amqp.auto_delete=true
+queue.consumer.amqp.passive=false
+queue.consumer.amqp.exclusive=false
 
 queue.publisher.amqp.exchange=pingpong-exchange
 queue.publisher.amqp.routing_key=ping
 queue.publisher.amqp.queue=ping-queue
-
+queue.publisher.amqp.auto_ack=false
+queue.publisher.amqp.durable=false
+queue.publisher.amqp.auto_delete=true
+queue.publisher.amqp.passive=false
+queue.publisher.amqp.exclusive=false
 
 
