--- a/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
@@ -24,10 +24,21 @@ cloudlet.resource_file=pong-cloudlet.properties
 queue.consumer.amqp.exchange=pingpong-exchange
 queue.consumer.amqp.routing_key=ping
 queue.consumer.amqp.queue=ping-queue
+queue.consumer.amqp.auto_ack=false
+queue.consumer.amqp.durable=false
+queue.consumer.amqp.auto_delete=true
+queue.consumer.amqp.passive=false
+queue.consumer.amqp.exclusive=false
 
 queue.publisher.amqp.exchange=pingpong-exchange
 queue.publisher.amqp.routing_key=pong
 queue.publisher.amqp.queue=pong-queue
+queue.publisher.amqp.auto_ack=false
+queue.publisher.amqp.durable=false
+queue.publisher.amqp.auto_delete=true
+queue.publisher.amqp.passive=false
+queue.publisher.amqp.exclusive=false
+
 
 kvstore.kvstore.connector_name=KVSTORE
 kvstore.kvstore.bucket=ping-pong
