Added Jetty HTTP-G connector.

--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -18,5 +18,6 @@
 		<module>tools-json</module>
 		<module>tools-miscellaneous</module>
 		<module>tools-transcript</module>
+		<module>jetty-httpg-connector</module>
 	</modules>
 </project>
