Fixed some synchronized issues.

--- a/cloudlets/src/main/resources/mosaic/cloudlet/config.properties
+++ b/cloudlets/src/main/resources/mosaic/cloudlet/config.properties
@@ -31,6 +31,7 @@ AmqpQueueConsumer.0=amqp.auto_ack
 CloudletDummyContainer.0=cloudlet.main_class
 CloudletDummyContainer.1=cloudlet.state_class
 CloudletDummyContainer.2=cloudlet.resource_file
+CloudletDummyContainer.3=cloudlet.no_instances
 KeyValueAccessor.0=kvstore.connector_name
 ContainerComponentCallbacks.0=amqp.driver.group.identifier
 ContainerComponentCallbacks.1=kvstore.driver.group.identifier
